@@ -27,7 +27,7 @@ Examples
 --------
 >>> import openturns as ot
 >>> model = ot.SymbolicFunction(['E', 'F', 'L', 'I'], ['-F*L^3/(3*E*I)'])
->>> problem = ot.OptimizationProblem(model, 5.0)
+>>> problem = ot.NearestPointProblem(model, 5.0)
 >>> algo = ot.AbdoRackwitz(problem)
 >>> algo.setStartingPoint([1.0] * 4)
 >>> algo.run()
