@@ -33,7 +33,7 @@ Examples
 --------
 >>> import openturns as ot
 >>> model = ot.SymbolicFunction(['x1', 'x2', 'x3', 'x4'], ['x1*cos(x1)+2*x2*x3-3*x3+4*x3*x4'])
->>> problem = ot.OptimizationProblem(model, -0.5)
+>>> problem = ot.NearestPointProblem(model, -0.5)
 >>> algo = ot.SQP(problem)
 >>> algo.setStartingPoint([1.0] * 4)
 >>> algo.run()
