@@ -14,6 +14,7 @@
  * Removed deprecated FittingTest::TwoSamplesKolmogorov
  * Removed deprecated LinearModel, LinearModelFactory
  * Removed deprecated HypothesisTest::(Partial|Full)Regression
+ * Removed deprecated OptimizationProblem(levelFunction, levelValue) ctor
 
 === Python module ===
 
